--- a/client/src/component/custumComponents/form-input/form-input.styles.scss
+++ b/client/src/component/custumComponents/form-input/form-input.styles.scss
@@ -11,6 +11,10 @@ $main-color: black;
   position: relative;
   margin: 45px 0;
 
+  &.smallMargin{
+    margin-bottom: 0;
+  }
+
   .form-input {
     background: none;
     background-color: white;
